--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title>Árvore Genealógica da Família Trentin</title>
 
 <style>
+body {
+        font-family: 'Arial', sans-serif; /* Choose a font you like */
+        background-color: rgb(175, 214, 175); /* Use the named color 'lightgreen' */
+      }
+
 .tree, .tree ul {
   list-style: none;
   padding: 0;
